--- a/slides/02-vector/02-vector.ipynb
+++ b/slides/02-vector/02-vector.ipynb
@@ -194,7 +194,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Subvector: $\\mathbf{x}_{2:4} = (x_2, x_3, x_4)'$."
+    "- Subvector: $\\mathbf{x}_{2:4} = \\begin{pmatrix} x_2 \\\\ x_3 \\\\ x_4 \\end{pmatrix}$."
    ]
   },
   {
@@ -382,7 +382,7 @@
    "source": [
     "## Vector operations\n",
     "\n",
-    "- **Vector addition** and **vector substraction**. For two vectors $\\mathbf{x}, \\mathbf{y} \\in \\mathbb{R}^n$ (of same length)\n",
+    "- **Vector addition** (or **elementwise addition**) and **vector substraction** (or **elementwise substraction**). For two vectors $\\mathbf{x}, \\mathbf{y} \\in \\mathbb{R}^n$ (of same length),\n",
     "$$\n",
     "\\mathbf{x} + \\mathbf{y} = \\begin{pmatrix}\n",
     "x_1 + y_1 \\\\ \\vdots \\\\ x_n + y_n\n",
@@ -570,13 +570,13 @@
     "\\mathbf{x}' = \\begin{pmatrix} x_1 \\\\ \\vdots \\\\ x_n \\end{pmatrix}' = (x_1 \\, \\ldots \\, x_n).\n",
     "$$\n",
     "\n",
-    "    Properties:  \n",
+    "Properties:\n",
     "    \n",
-    "    1. $(\\mathbf{x}')' = \\mathbf{x}$.  \n",
+    "1. $(\\mathbf{x}')' = \\mathbf{x}$.  \n",
     "    \n",
-    "    2. Transposition is a linear operator: $(\\alpha \\mathbf{x} + \\beta \\mathbf{y})' = \\alpha \\mathbf{x}' + \\beta \\mathbf{y}'$.  \n",
+    "2. Transposition is a linear operator: $(\\alpha \\mathbf{x} + \\beta \\mathbf{y})' = \\alpha \\mathbf{x}' + \\beta \\mathbf{y}'$.  \n",
     "\n",
-    "    Superscript $^t$ or $^T$ is also commonly used to denote transpose: $\\mathbf{x}^t$, $\\mathbf{x}^T$."
+    "Superscript $^t$ or $^T$ is also commonly used to denote transpose: $\\mathbf{x}^t$, $\\mathbf{x}^T$."
    ]
   },
   {
@@ -654,15 +654,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Examples of inner product:\n",
+    "Examples of inner product. **In class exercises**: express the following quantities using vector inner products.\n",
     "\n",
-    "1. Inner product with unit vector: $\\mathbf{e}_i' \\mathbf{x} = x_i$.\n",
+    "1. Individual component: $x_i = \\rule[-0.1cm]{1cm}{0.15mm}$.\n",
     "\n",
-    "2. Differencing: $(\\mathbf{e}_i - \\mathbf{e}_j)' \\mathbf{x} = x_i - x_j$.\n",
+    "2. Differencing: $x_i - x_j = \\rule[-0.1cm]{1cm}{0.15mm}$.\n",
     "\n",
-    "3. Sum: $\\mathbf{1}' \\mathbf{x} = x_1 + \\cdots + x_n$.\n",
+    "3. Sum: $x_1 + \\cdots + x_n = \\rule[-0.1cm]{1cm}{0.15mm}$.\n",
     "\n",
-    "4. Average: $(\\frac 1n \\mathbf{1})' \\mathbf{x} = (x_1 + \\cdots + x_n) / n$."
+    "4. Average: $(x_1 + \\cdots + x_n) / n = \\rule[-0.1cm]{1cm}{0.15mm}$."
    ]
   },
   {
@@ -740,27 +740,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Intel Skylake CPUs can do 16 double-precision flops per CPU cylce. Then the theoretical throughput of a single core on my laptop is\n",
+    "Assume that the Apple M2 Max CPUs can do 8 double-precision flops per CPU cylce (?). Then the theoretical throughput of a single performance core on my laptop is\n",
     "$$\n",
-    "2.9 \\times 10^9 \\times 16 = 46.4 \\times 10^9 \\text{ flops/second} = 46.4 \\text{ GFLOPS}\n",
+    "8 \\times 10^9 \\times 16 = 27.9 \\times 10^9 \\text{ flops/second} = 27.9 \\text{ GFLOPS}\n",
     "$$\n",
     "in double precision. I estimate my computer takes about\n",
     "$$\n",
-    "\\frac{10^7 - 1}{46.4 \\times 10^9} \\approx 0.0002155 \\text{ seconds}\n",
+    "\\frac{10^7 - 1}{27.9 \\times 10^9} \\approx 0.000358 \\text{ seconds} = 358 \\text{ micro seconds}\n",
     "$$\n",
     "to sum a vector of length $n = 10^7$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.001648 seconds (1 allocation: 16 bytes)\n"
+      "  0.002134 seconds (1 allocation: 16 bytes)\n"
      ]
     }
    ],
@@ -1061,7 +1061,9 @@
     "    \n",
     "    4. **Cauchy-Schwartz inequality**: $|\\mathbf{x}' \\mathbf{y}| \\le \\|\\mathbf{x}\\| \\|\\mathbf{y}\\|$ for any $\\mathbf{x}, \\mathbf{y} \\in \\mathbb{R}^n$. The equality holds when (1) $\\mathbf{x} = \\mathbf{0}$ or $\\mathbf{y}=\\mathbf{0}$ or (2) $\\mathbf{x} \\ne \\mathbf{0}$, $\\mathbf{y} \\ne \\mathbf{0}$, and $\\mathbf{x} = \\alpha \\mathbf{y}$ for some $\\alpha \\ne 0$.\n",
     "    \n",
-    "    Proof: The function $f(t) = \\|\\mathbf{x} - t \\mathbf{y}\\|_2^2 = \\|\\mathbf{x}\\|_2^2 - 2t (\\mathbf{x}' \\mathbf{y}) + t^2\\|\\mathbf{y}\\|_2^2$ is minimized at $t^\\star =(\\mathbf{x}'\\mathbf{y}) / \\|\\mathbf{y}\\|^2$ with minimal value $f(t^\\star) = \\|\\mathbf{x}\\|^2 - (\\mathbf{x}'\\mathbf{y})^2 / \\|\\mathbf{y}\\|^2 \\ge 0$. "
+    "    Proof: The function $f(t) = \\|\\mathbf{x} - t \\mathbf{y}\\|_2^2 = \\|\\mathbf{x}\\|_2^2 - 2t (\\mathbf{x}' \\mathbf{y}) + t^2\\|\\mathbf{y}\\|_2^2$ is minimized at $t^\\star =(\\mathbf{x}'\\mathbf{y}) / \\|\\mathbf{y}\\|^2$ with minimal value $0 \\le f(t^\\star) = \\|\\mathbf{x}\\|^2 - (\\mathbf{x}'\\mathbf{y})^2 / \\|\\mathbf{y}\\|^2$.\n",
+    "\n",
+    "    There are at least 5 other proofs on [Wikipedia](https://en.wikipedia.org/wiki/Cauchy%E2%80%93Schwarz_inequality)."
    ]
   },
   {
@@ -1275,7 +1277,7 @@
     }
    ],
    "source": [
-    "# check Cauchy-Schwartz inequality\n",
+    "# check Cauchy-Schwartz inequality on random vectors\n",
     "@show x = randn(5)\n",
     "@show y = randn(5)\n",
     "@show abs(x'y)\n",
@@ -1366,7 +1368,7 @@
     "$$\n",
     "This is the unique value of $\\theta \\in [0, \\pi]$ that satisifies\n",
     "$$\n",
-    "\\mathbf{x}'\\mathbf{y} = \\|\\mathbf{x}\\|\\|\\mathbf{y}\\| \\cos \\theta.\n",
+    "\\cos \\theta = \\frac{\\mathbf{x}'\\mathbf{y}}{\\|\\mathbf{x}\\|\\|\\mathbf{y}\\|}.\n",
     "$$\n",
     "\n",
     "- Cauchy-Schwartz inequality guarantees that \n",
@@ -1382,9 +1384,7 @@
     "| $0 \\le \\theta < \\pi/2$   | $\\mathbf{x}'\\mathbf{y} > 0$                             |  $\\mathbf{x}$ and $\\mathbf{y}$ make an acute angle                                |\n",
     "| $\\theta = \\pi / 2$       | $\\mathbf{x}'\\mathbf{y} = 0$                             | $\\mathbf{x}$ and $\\mathbf{y}$ are **orthogonal**, $\\mathbf{x} \\perp \\mathbf{y}$ |\n",
     "| $\\pi/2 < \\theta \\le \\pi$ | $\\mathbf{x}'\\mathbf{y} < 0$                             | $\\mathbf{x}$ and $\\mathbf{y}$ make an obtuse angle                                |\n",
-    "| $\\theta = \\pi$           | $\\mathbf{x}'\\mathbf{y} = -\\|\\mathbf{x}\\|\\|\\mathbf{y}\\|$ | $\\mathbf{x}$ and $\\mathbf{y}$ are anti-aligned or opposed                         |\n",
-    "\n",
-    "TODO: Picture."
+    "| $\\theta = \\pi$           | $\\mathbf{x}'\\mathbf{y} = -\\|\\mathbf{x}\\|\\|\\mathbf{y}\\|$ | $\\mathbf{x}$ and $\\mathbf{y}$ are anti-aligned or opposed                         |"
    ]
   },
   {
@@ -2059,7 +2059,7 @@
     "$$\n",
     "\\alpha_1 \\mathbf{a}_1 + \\cdots + \\alpha_k \\mathbf{a}_k = \\mathbf{0}.\n",
     "$$\n",
-    "They are **linearly independent** if they are not linearly dependent. That is if $\\alpha_1 \\mathbf{a}_1 + \\cdots + \\alpha_k \\mathbf{a}_k = \\mathbf{0}$ then $\\alpha_1 = \\cdots = \\alpha_k = 0$ (this is usually how we show a set of vectors are linearly independent).\n",
+    "They are **linearly independent** if they are not linearly dependent. That is if $\\alpha_1 \\mathbf{a}_1 + \\cdots + \\alpha_k \\mathbf{a}_k = \\mathbf{0}$ then $\\alpha_1 = \\cdots = \\alpha_k = 0$ (this is usually how we show that a set of vectors are linearly independent).\n",
     "\n",
     "- Theorem: Unit vectors $\\mathbf{e}_1, \\ldots, \\mathbf{e}_n \\in \\mathbb{R}^n$ are linearly independent. \n",
     "\n",
@@ -2101,7 +2101,7 @@
     "\n",
     "- Fact: the zero vector $\\mathbf{0}_n$ cannot be a basis vector in $\\mathbb{R}^n$. Why?\n",
     "\n",
-    "- Any vector $\\mathbf{x} \\in \\mathbb{R}^n$ can be expressed as a linear combination of basis vectors $\\mathbf{x} = \\alpha_1 \\mathbf{a}_1 + \\cdots + \\alpha_n \\mathbf{a}_n$ for some $\\alpha_1, \\ldots, \\alpha_n$, and these coefficients are unique. This is called expansion of $\\mathbf{x}$ in the basis $\\mathbf{a}_1, \\ldots, \\mathbf{a}_n$.\n",
+    "- **Theorem**: Any vector $\\mathbf{x} \\in \\mathbb{R}^n$ can be expressed as a linear combination of basis vectors $\\mathbf{x} = \\alpha_1 \\mathbf{a}_1 + \\cdots + \\alpha_n \\mathbf{a}_n$ for some $\\alpha_1, \\ldots, \\alpha_n$, and these coefficients are unique. This is called expansion of $\\mathbf{x}$ in the basis $\\mathbf{a}_1, \\ldots, \\mathbf{a}_n$.\n",
     "\n",
     "    Proof of existence by contradition (optional). Suppose $\\mathbf{x}$ can NOT be expressed as a linear combination of basis vectors $\\mathbf{x} = \\alpha_1 \\mathbf{a}_1 + \\cdots + \\alpha_n \\mathbf{a}_n$. Suppose an arbitrary linear combination $\\alpha_1 \\mathbf{a}_1 + \\cdots + \\alpha_n \\mathbf{a}_n + \\beta \\mathbf{x} = \\mathbf{0}$. Then $\\beta = 0$ otherwise it contradictions with our assumption. Also $\\alpha_1 = \\cdots = \\alpha_n = 0$ by linear independence of $\\mathbf{a}_1, \\ldots, \\mathbf{a}_n$. Therefore we conclude $\\alpha_1 = \\cdots = \\alpha_n = \\beta = 0$. Thus $\\mathbf{a}_1, \\ldots, \\mathbf{a}_n, \\mathbf{x}$ are linearly independent, contradicting with the independence-dimension inequality.\n",
     "    \n",
