--- a/hw/hw1/hw1.ipynb
+++ b/hw/hw1/hw1.ipynb
@@ -1,21 +1,37 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
-    "# Biostat 216 Homework 1\n",
-    "\n",
-    "**Due Sep 30 @ 11:59pm**"
+    "---\n",
+    "title: \"Biostat 216 Homework 1\"\n",
+    "subtitle: \"Due Oct 6 @ 11:59pm\"\n",
+    "format:\n",
+    "  html:\n",
+    "    theme: cosmo\n",
+    "    embed-resources: true\n",
+    "    number-sections: true\n",
+    "    toc: true\n",
+    "    toc-depth: 4\n",
+    "    toc-location: left\n",
+    "    code-fold: false\n",
+    "---"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Submit a PDF (scanned/photographed from handwritten solutions, or converted from RMarkdown or Jupyter Notebook) to Gradescope in BruinLearn. \n",
+    "Submit a PDF (scanned/photographed from handwritten solutions, or converted from RMarkdown or Jupyter Notebook or Quarto) to Gradescope in BruinLearn. \n",
     "\n",
-    "BV exercises: 3.3, 3.4, 3.5, 3.13, 3.16, 3.17, 3.21, and 3.22."
+    "BV exercises: 1.7, 1.9, 1.13, 1.20, 3.3, 3.4, 3.5, and 3.22 (replace Palo Alto by Los Angeles).\n",
+    "\n",
+    "Prove the formula \n",
+    "$$\n",
+    "\\operatorname{avg}(\\mathbf{x})^2 + \\operatorname{std}(\\mathbf{x})^2 = \\operatorname{rms}(\\mathbf{x})^2\n",
+    "$$\n",
+    "using the vector notation and do BV 3.15."
    ]
   }
  ],
@@ -25,16 +41,19 @@
    "lastKernelId": null
   },
   "hide_input": false,
+  "jupytext": {
+   "formats": "ipynb,qmd"
+  },
   "kernelspec": {
-   "display_name": "Julia 1.8.0",
+   "display_name": "Julia 1.9.3",
    "language": "julia",
-   "name": "julia-1.8"
+   "name": "julia-1.9"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.8.0"
+   "version": "1.9.3"
   },
   "toc": {
    "colors": {
