--- a/slides/02-vector/02-vector.ipynb
+++ b/slides/02-vector/02-vector.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: Vectors (BV Chapters 1, 3, 5)\n",
+    "title: 'Vectors (BV Chapters 1, 3, 5)'\n",
     "subtitle: Biostat 216\n",
     "author: Dr. Hua Zhou @ UCLA\n",
     "date: today\n",
@@ -122,24 +122,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Vectors (BV Chapters 1, 3, 5)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# Vectors (BV Chapters 1, 3, 5)\n",
+    "\n",
     "## Notation\n",
     "\n",
-    "- A column vector $\\mathbf{x} \\in \\mathbb{R}^n$\n",
+    "- A column vector $\\mathbf{x} \\in \\mathbb{R}^n$:\n",
     "$$\n",
     "\\mathbf{x} = \\begin{pmatrix}\n",
     "x_1 \\\\ x_2 \\\\ \\vdots \\\\ x_n\n",
-    "\\end{pmatrix}.\n",
-    "$$\n",
-    "$n$ is the **dimension** or **length** or **size** of the vector. $x_i$ is the $i$-th **entry** or **element** or **component** of $\\mathbf{x}$.\n",
+    "\\end{pmatrix} = (x_1, x_2, \\ldots, x_n).\n",
+    "$$  \n",
+    "  - $n$ is the **dimension** (or **length** or **size**) of the vector. \n",
     "\n",
-    "- A row vector $\\mathbf{x}' = (x_1 \\ldots x_n)$."
+    "  - $x_i$ is the $i$-th **entry** (or **element** or **component** or **coefficient**) of $\\mathbf{x}$. \n",
+    "\n",
+    "  - A vector of length $n$ is called an **$n$-vector**.\n",
+    "\n",
+    "- A row vector $\\mathbf{x}' = (x_1 \\, x_2 \\, \\ldots x_n)$ (without commas)."
    ]
   },
   {
@@ -228,7 +227,7 @@
     "$$\n",
     "\\mathbf{x} = \\begin{pmatrix}\n",
     "\\mathbf{y} \\\\ \\mathbf{z}\n",
-    "\\end{pmatrix} = \\begin{pmatrix}\n",
+    "\\end{pmatrix} = (\\mathbf{y}, \\mathbf{z}) = \\begin{pmatrix}\n",
     "y_1 \\\\ \\vdots \\\\ y_m \\\\ z_1 \\\\ \\vdots \\\\ z_n\n",
     "\\end{pmatrix}.\n",
     "$$"
@@ -576,13 +575,8 @@
     "    \n",
     "2. Transposition is a linear operator: $(\\alpha \\mathbf{x} + \\beta \\mathbf{y})' = \\alpha \\mathbf{x}' + \\beta \\mathbf{y}'$.  \n",
     "\n",
-    "Superscript $^t$ or $^T$ is also commonly used to denote transpose: $\\mathbf{x}^t$, $\\mathbf{x}^T$."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Superscript $^t$ or $^T$ is also commonly used to denote transpose: $\\mathbf{x}^t$, $\\mathbf{x}^T$.\n",
+    "\n",
     "- The **inner product** or **dot product** between two vectors $\\mathbf{x}, \\mathbf{y} \\in \\mathbb{R}^n$ is\n",
     "$$\n",
     "\\mathbf{x}' \\mathbf{y} = (x_1 \\, \\ldots \\, x_n) \\begin{pmatrix} y_1 \\\\ \\vdots \\\\ y_n \\end{pmatrix} = x_1 y_1 + \\cdots + x_n y_n.\n",
@@ -647,13 +641,8 @@
     "\n",
     "4. Associative with scalar multiplication: $(\\alpha \\mathbf{x})' \\mathbf{y} = \\alpha (\\mathbf{x}' \\mathbf{y}) = \\mathbf{x}' (\\alpha \\mathbf{y})$. \n",
     "\n",
-    "5. Distributive with vector addition: $(\\mathbf{x} + \\mathbf{y})' \\mathbf{z} = \\mathbf{x}' \\mathbf{z} + \\mathbf{y}' \\mathbf{z}$."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "5. Distributive with vector addition: $(\\mathbf{x} + \\mathbf{y})' \\mathbf{z} = \\mathbf{x}' \\mathbf{z} + \\mathbf{y}' \\mathbf{z}$.\n",
+    "\n",
     "Examples of inner product. **In class exercises**: express the following quantities using vector inner products.\n",
     "\n",
     "1. Individual component: $x_i = \\rule[-0.1cm]{1cm}{0.15mm}$.\n",
@@ -662,13 +651,18 @@
     "\n",
     "3. Sum: $x_1 + \\cdots + x_n = \\rule[-0.1cm]{1cm}{0.15mm}$.\n",
     "\n",
-    "4. Average: $(x_1 + \\cdots + x_n) / n = \\rule[-0.1cm]{1cm}{0.15mm}$."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "4. Average: $(x_1 + \\cdots + x_n) / n = \\rule[-0.1cm]{1cm}{0.15mm}$.\n",
+    "\n",
+    "## Computer representation of numbers and vectors\n",
+    "\n",
+    "- Real numbers are represented as the **floating point numbers** in computers.\n",
+    "\n",
+    "- (Double precision) floating point numbers approximate real numbers to an accuracy of 15-16 digits.\n",
+    "\n",
+    "- One (double precision) floating point number takes 64 bits (0s and 1s), or 8 bytes.\n",
+    "\n",
+    "- An $n$-vector requires $8n$ bytes to store.\n",
+    "\n",
     "## Computational complexity of vector operations\n",
     "\n",
     "- One **floating point operation** (flop) is one basic arithmetic operation in $\\mathbb{R}$ or $\\mathbb{C}$: $+, -, *, /, \\sqrt, ...$\n",
@@ -691,19 +685,19 @@
     "$$\n",
     "\n",
     "\n",
-    "- Assume vectors are all of length $n$. \n",
+    "- **In-class exercises**. Assume vectors are all of length $n$. Give the flop counts of the following operations.\n",
     "\n",
-    "    1. Sum the elements of a vector: $n-1$ flops.\n",
+    "    1. Sum the elements of a vector: $\\rule[-0.1cm]{1cm}{0.15mm}$ flops.\n",
     "    \n",
-    "    2. Vector addition and substraction: $n$ flops.\n",
+    "    2. Vector addition and substraction: $\\rule[-0.1cm]{1cm}{0.15mm}$ flops.\n",
     "\n",
-    "    3. Scalar multiplication: $n$ flops.\n",
+    "    3. Scalar multiplication: $\\rule[-0.1cm]{1cm}{0.15mm}$ flops.\n",
     "\n",
-    "    4. Elementwise multiplication: $n$ flops.\n",
+    "    4. Elementwise multiplication: $\\rule[-0.1cm]{1cm}{0.15mm}$ flops.\n",
     "\n",
-    "    5. Inner product: $2n - 1$ flops.  \n",
+    "    5. Inner product: $\\rule[-0.1cm]{1cm}{0.15mm}$ flops.  \n",
     "    \n",
-    "    6. Norm of a vector: $2n$ flops.\n",
+    "    6. Norm of a vector: $\\rule[-0.1cm]{1cm}{0.15mm}$ flops.\n",
     "    \n",
     "- These vector operations are all order $n$ algorithms."
    ]
@@ -777,13 +771,8 @@
    "metadata": {},
    "source": [
     "## Norm, distance, angle\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "\n",
+    "\n",
     "- The **Euclidean norm** or **L2 norm** of a vector $\\mathbf{x} \\in \\mathbb{R}^n$ is\n",
     "$$\n",
     "\\|\\mathbf{x}\\| = \\|\\mathbf{x}\\|_2 = (\\mathbf{x}'\\mathbf{x})^{1/2} = \\sqrt{x_1^2 + \\cdots + x_n^2}.\n",
@@ -1296,13 +1285,8 @@
     "    1. Nonnegativity. $\\|\\mathbf{x} - \\mathbf{y}\\| \\ge 0$ for all $\\mathbf{x}$ and $\\mathbf{y}$. And $\\|\\mathbf{x} - \\mathbf{y}\\| = 0$ if and only if $\\mathbf{x} = \\mathbf{y}$.\n",
     "    \n",
     "    2. Triangular inequality: $\\|\\mathbf{x} - \\mathbf{y}\\| \\le \\|\\mathbf{x} - \\mathbf{z}\\| + \\|\\mathbf{z} - \\mathbf{y}\\|$.  \n",
-    "    Proof: TODO."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "    Proof: TODO.\n",
+    "\n",
     "- The **average** of a vector $\\mathbf{x}$ is\n",
     "$$\n",
     "\\operatorname{avg}(\\mathbf{x}) = \\bar{\\mathbf{x}} = \\frac{x_1 + \\cdots + x_n}{n} = \\frac{\\mathbf{1}' \\mathbf{x}}{n}.\n",
@@ -1322,7 +1306,7 @@
     "\n",
     "    This result underlies the famous _bias-variance tradeoff_ in statistics. \n",
     "    \n",
-    "    Proof: TODO in class. $\\operatorname{std}(\\mathbf{x})^2 = \\frac{\\|\\mathbf{x} - (\\mathbf{1}' \\mathbf{x} / n) \\mathbf{1}\\|^2}{n} = ... = \\operatorname{rms}(\\mathbf{x})^2 - \\operatorname{avg}(\\mathbf{x})^2$. "
+    "    Proof: HW1. Hint: $\\operatorname{std}(\\mathbf{x})^2 = \\frac{\\|\\mathbf{x} - (\\mathbf{1}' \\mathbf{x} / n) \\mathbf{1}\\|^2}{n} = ... = \\operatorname{rms}(\\mathbf{x})^2 - \\operatorname{avg}(\\mathbf{x})^2$. "
    ]
   },
   {
@@ -2088,20 +2072,15 @@
     "$$\n",
     "    \\sum_{i=1}^{j-1} \\beta_i \\begin{pmatrix} \\mathbf{b}_i \\\\ \\alpha_i \\end{pmatrix} + \\gamma \\begin{pmatrix} \\mathbf{b}_j \\\\ \\alpha_j \\end{pmatrix} + \\sum_{i=j+1}^k \\beta_{i-1} \\begin{pmatrix} \\mathbf{b}_i \\\\ \\alpha_i \\end{pmatrix} = \\mathbf{0}\n",
     "$$\n",
-    "with $\\gamma = - \\alpha_j^{-1} \\left( \\sum_{i=1}^{j-1} \\beta_i \\alpha_i + \\sum_{i=j+1}^k \\beta_{i-1} \\alpha_i \\right)$. Since the vectors $\\mathbf{a}_i$ are linearly independent, all coefficients $\\beta_i$ and $\\gamma$ are all zero. This in turns implies that the vectors $\\mathbf{c}_1, \\ldots, \\mathbf{c}_{k-1}$ are linearly independent. By the induction hypothesis $k-1 \\le n-1$, we have established $k \\le n$."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "with $\\gamma = - \\alpha_j^{-1} \\left( \\sum_{i=1}^{j-1} \\beta_i \\alpha_i + \\sum_{i=j+1}^k \\beta_{i-1} \\alpha_i \\right)$. Since the vectors $\\mathbf{a}_i$ are linearly independent, all coefficients $\\beta_i$ and $\\gamma$ are all zero. This in turns implies that the vectors $\\mathbf{c}_1, \\ldots, \\mathbf{c}_{k-1}$ are linearly independent. By the induction hypothesis $k-1 \\le n-1$, we have established $k \\le n$.\n",
+    "\n",
     "## Basis\n",
     "\n",
     "- A set of $n$ linearly independent vectors $\\mathbf{a}_1, \\ldots, \\mathbf{a}_n \\in \\mathbb{R}^n$ is called a **basis** for $\\mathbb{R}^n$. \n",
     "\n",
     "- Fact: the zero vector $\\mathbf{0}_n$ cannot be a basis vector in $\\mathbb{R}^n$. Why?\n",
     "\n",
-    "- **Theorem**: Any vector $\\mathbf{x} \\in \\mathbb{R}^n$ can be expressed as a linear combination of basis vectors $\\mathbf{x} = \\alpha_1 \\mathbf{a}_1 + \\cdots + \\alpha_n \\mathbf{a}_n$ for some $\\alpha_1, \\ldots, \\alpha_n$, and these coefficients are unique. This is called expansion of $\\mathbf{x}$ in the basis $\\mathbf{a}_1, \\ldots, \\mathbf{a}_n$.\n",
+    "- Theorem: Any vector $\\mathbf{x} \\in \\mathbb{R}^n$ can be expressed as a linear combination of basis vectors $\\mathbf{x} = \\alpha_1 \\mathbf{a}_1 + \\cdots + \\alpha_n \\mathbf{a}_n$ for some $\\alpha_1, \\ldots, \\alpha_n$, and these coefficients are unique. This is called expansion of $\\mathbf{x}$ in the basis $\\mathbf{a}_1, \\ldots, \\mathbf{a}_n$.\n",
     "\n",
     "    Proof of existence by contradition (optional). Suppose $\\mathbf{x}$ can NOT be expressed as a linear combination of basis vectors $\\mathbf{x} = \\alpha_1 \\mathbf{a}_1 + \\cdots + \\alpha_n \\mathbf{a}_n$. Suppose an arbitrary linear combination $\\alpha_1 \\mathbf{a}_1 + \\cdots + \\alpha_n \\mathbf{a}_n + \\beta \\mathbf{x} = \\mathbf{0}$. Then $\\beta = 0$ otherwise it contradictions with our assumption. Also $\\alpha_1 = \\cdots = \\alpha_n = 0$ by linear independence of $\\mathbf{a}_1, \\ldots, \\mathbf{a}_n$. Therefore we conclude $\\alpha_1 = \\cdots = \\alpha_n = \\beta = 0$. Thus $\\mathbf{a}_1, \\ldots, \\mathbf{a}_n, \\mathbf{x}$ are linearly independent, contradicting with the independence-dimension inequality.\n",
     "    \n",
@@ -2110,13 +2089,8 @@
     "- Example: Unit vectors $\\mathbf{e}_1, \\ldots, \\mathbf{e}_n$ form a basis for $\\mathbb{R}^n$. Expansion of a vector $\\mathbf{x} \\in \\mathbb{R}^n$ in this basis is\n",
     "$$\n",
     "\\mathbf{x} = x_1 \\mathbf{e}_1 + \\cdots + x_n \\mathbf{e}_n.\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "$$\n",
+    "\n",
     "## Orthonormal basis\n",
     "\n",
     "- A set of vectors $\\mathbf{a}_1, \\ldots, \\mathbf{a}_k$ are **(mutually) orthogonal** if $\\mathbf{a}_i \\perp \\mathbf{a}_j$ for any $i \\ne j$. They are **normalized** if $\\|\\mathbf{a}_i\\|=1$ for all $i$. They are **orthonormal** if they are both orthogonal and normalized.\n",
@@ -2736,24 +2710,14 @@
     "\\mathbf{q}_j' \\tilde{\\mathbf{q}}_i = \\mathbf{q}_j' \\mathbf{a}_i - (\\mathbf{q}_1' \\mathbf{a}_i) (\\mathbf{q}_j' \\mathbf{q}_1) - \\cdots - (\\mathbf{q}_{i-1}' \\mathbf{a}_i) (\\mathbf{q}_j' \\mathbf{q}_{i-1}) = \\mathbf{q}_j' \\mathbf{a}_i - \\mathbf{q}_j' \\mathbf{a}_i = 0.\n",
     "$$\n",
     "\n",
-    "- So $\\mathbf{q}_1, \\ldots, \\mathbf{q}_i$ are orthogonal. The normalization step enures $\\mathbf{q}_i$ is normal."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "- So $\\mathbf{q}_1, \\ldots, \\mathbf{q}_i$ are orthogonal. The normalization step enures $\\mathbf{q}_i$ is normal.\n",
+    "\n",
     "Suppose G-S has not terminated by iteration $i$, then \n",
     "\n",
     "- $\\mathbf{a}_i$ is a combination of $\\mathbf{q}_1, \\ldots, \\mathbf{q}_i$, and\n",
     "\n",
-    "- $\\mathbf{q}_i$ is a combination of $\\mathbf{a}_1, \\ldots, \\mathbf{a}_i$."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "- $\\mathbf{q}_i$ is a combination of $\\mathbf{a}_1, \\ldots, \\mathbf{a}_i$.\n",
+    "\n",
     "Computational complexity of G-S algorithm:\n",
     "\n",
     "- Step 1 of iteration $i$ requires $i-1$ inner products, $\\mathbf{q}_1' \\mathbf{a}_i, \\ldots, \\mathbf{q}_{i-1}' \\mathbf{a}_i$, which costs $(i-1)(2n-1)$ flops.  \n",
