--- a/_posts/2023-09-28-week0.md
+++ b/_posts/2023-09-28-week0.md
@@ -8,6 +8,8 @@ Welcome to Biostat 216 *Mathematical Methods for Biostatistics*.
 
 ## Today
 
-* Course introduction, vectors (BV Chapters 1, 3, 5).
+* Course introduction.
+
+* Vectors (BV Chapters 1, 3, 5).
 
 * HW1 posted. Due Oct 6 @ 11:59pm on Gradescope/BruinLearn.
