add changes of TA office hours

--- a/slides/02-vector/02-vector.ipynb
+++ b/slides/02-vector/02-vector.ipynb
@@ -772,7 +772,6 @@
    "source": [
     "## Norm, distance, angle\n",
     "\n",
-    "\n",
     "- The **Euclidean norm** or **L2 norm** of a vector $\\mathbf{x} \\in \\mathbb{R}^n$ is\n",
     "$$\n",
     "\\|\\mathbf{x}\\| = \\|\\mathbf{x}\\|_2 = (\\mathbf{x}'\\mathbf{x})^{1/2} = \\sqrt{x_1^2 + \\cdots + x_n^2}.\n",
@@ -1056,7 +1055,9 @@
     "    \n",
     "    Proof: The function $f(t) = \\|\\mathbf{x} - t \\mathbf{y}\\|_2^2 = \\|\\mathbf{x}\\|_2^2 - 2t (\\mathbf{x}' \\mathbf{y}) + t^2\\|\\mathbf{y}\\|_2^2$ is minimized at $t^\\star =(\\mathbf{x}'\\mathbf{y}) / \\|\\mathbf{y}\\|^2$ with minimal value $0 \\le f(t^\\star) = \\|\\mathbf{x}\\|^2 - (\\mathbf{x}'\\mathbf{y})^2 / \\|\\mathbf{y}\\|^2$.\n",
     "\n",
-    "    There are at least 5 other proofs on [Wikipedia](https://en.wikipedia.org/wiki/Cauchy%E2%80%93Schwarz_inequality)."
+    "    There are at least 5 other proofs of CS inequality on [Wikipedia](https://en.wikipedia.org/wiki/Cauchy%E2%80%93Schwarz_inequality).\n",
+    "\n",
+    "The first there properties are the defining properties of any vector norm."
    ]
   },
   {
