--- a/_posts/2023-10-03-week1-day1.md
+++ b/_posts/2023-10-03-week1-day1.md
@@ -8,7 +8,9 @@ category: biostat216fall2023
 
 * HW1 due this Friday 11:59pm on Gradescope/BruinLearn.
 
-* Instructor OH: Tue 12pm-1pm (CHS 21-254A), Thu (2pm-3pm, Zoom)?
+* Instructor OH: Tue 12pm-1pm (CHS 21-254A), Thu 2pm-3pm (Zoom)?
+
+* TA OH: Wed 5pm-6pm (CHS 51-236D), Fri 2pm-3pm (Zoom)?
 
 ## Today
 
